Amended div tags to section in project starter files and updated the transition and scale attributes

--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,10 @@ header .profile-image {
   border-radius: 50%;
   object-fit: cover;
   border: 3px solid white;
-  transition: all .5s;
+  transition: all 1s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.5) rotate(360deg);
 }
 .tag {
   background-color: #efefef;
